# TITA_SDK

./: README.md
tita_hw/: CMakeLists.txt  package.xml
tita_hw/include/tita_hw/: CANBus.h  RobotAssets.h  SocketCAN.h  TITA.h
tita_hw/src/: CANBus.cpp  SocketCAN.cpp  TITA.cpp
tita_hw/test/: TestControl.cpp  TestIMU.cpp  TestPeripheral.cpp
