<?xml version="1.0"?>
<package format="2">
  <name>tita_hw</name>
  <version>0.0.0</version>
  <description>use usb2can to interactive with TITA</description>
  <maintainer email="liusiyang.cn@gmail.com">4yang</maintainer>

  <license>BSD</license>
  <author email="liusiyang.cn@gmail.com">4yang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>imu_complementary_filter</depend>
  <depend>imu_filter_madgwick</depend>
</package>